--- a/pom.xml
+++ b/pom.xml
@@ -5,78 +5,82 @@
   <groupId>com.datadoghq</groupId>
   <artifactId>datadog-lambda-java</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
       <version>1.2.1</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
       <version>3.10.0</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.9</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.13</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
       <version>4.9.2</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.32</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
       <version>22.0.0</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>io.opentracing</groupId>
       <artifactId>opentracing-api</artifactId>
       <version>0.33.0</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>io.opentracing</groupId>
       <artifactId>opentracing-util</artifactId>
       <version>0.33.0</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>com.datadoghq</groupId>
       <artifactId>dd-trace-api</artifactId>
       <version>0.90.0</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>com.datadoghq</groupId>
       <artifactId>java-dogstatsd-client</artifactId>
       <version>3.0.0</version>
-      <scope>runtime</scope>
+      
     </dependency>
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
