--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,14 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.datadoghq</groupId>
+  <groupId>dreigada</groupId>
   <artifactId>datadog-lambda-java</artifactId>
+  <name>datadog-lambda-java</name>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  <build>
-    <sourceDirectory>src/main/java</sourceDirectory>
-  </build>
   <dependencies>
     <dependency>
       <groupId>com.amazonaws</groupId>
